Avoid duplications in segue cases

--- a/Tests/Storyboard/fixtures/Message.storyboard
+++ b/Tests/Storyboard/fixtures/Message.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xKD-v4-X1W">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xKD-v4-X1W">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
@@ -77,6 +77,7 @@
                     </view>
                     <connections>
                         <segue destination="bbN-U1-T2o" kind="showDetail" identifier="NonCustom" id="0gO-jd-IYi"/>
+                        <segue destination="xKD-v4-X1W" kind="show" identifier="Back" id="7YR-nB-KRc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ph3-jv-P42" userLabel="First Responder" sceneMemberID="firstResponder"/>
